# winzy-win-geometry

./: README.md  pyproject.toml
tests/: test_winzy_win_geometry.py
winzy_win_geometry/: __init__.py  _macosgetsize.py  _wingetsize.py
